# mcp-test-service

./: .dockerignore  .gitignore  README.md  mcp_client_example.py  pyproject.toml  requirements.txt  verify_setup.py
.devcontainer/: Dockerfile  bashrc  devcontainer.json
mcp_service/: __init__.py  __main__.py  data.py  handlers.py  main.py  models.py  server.py
tests/: __init__.py  test_product_service.py  test_server.py
